--- a/src/client/components/header-bar/header-bar.scss
+++ b/src/client/components/header-bar/header-bar.scss
@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 
-@import '../../../imports';
+@import '../../imports';
 
-.no-data-header-bar {
+.header-bar {
   @extend %header-bar;
 }
